--- a/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/app/src/main/res/drawable/ic_launcher_background.xml
@@ -4,7 +4,16 @@
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
+    <!-- خلفية داكنة عميقة -->
+    <path
+        android:fillColor="#0A0A14"
+        android:pathData="M0,0h108v108h-108z" />
+    <!-- تدرج بنفسجي خفيف في الوسط -->
     <path
         android:fillColor="#1A0533"
-        android:pathData="M0,0h108v108h-108z" />
+        android:pathData="M54,54 m-40,0 a40,40 0,1 1,80 0 a40,40 0,1 1,-80 0"/>
+    <!-- حلقة بنفسجية داكنة -->
+    <path
+        android:fillColor="#12021F"
+        android:pathData="M54,54 m-30,0 a30,30 0,1 1,60 0 a30,30 0,1 1,-60 0"/>
 </vector>
