--- a/app/src/main/res/drawable/ic_splash_logo.xml
+++ b/app/src/main/res/drawable/ic_splash_logo.xml
@@ -12,36 +12,87 @@
 
   <!-- حلقة توهج بنفسجية -->
   <path
-      android:fillColor="#3B0764"
+      android:fillColor="#1A0533"
       android:pathData="M54,54m-46,0a46,46 0,1 1,92 0a46,46 0,1 1,-92 0"/>
 
-  <!-- أجنحة الخفاش -->
+  <!-- الجناح الأيسر - بنفسجي -->
   <path
-      android:pathData="M54,36 C54,36 34,41 24,52 C19,58 21,64 27,65 C33,66 39,61 43,56 C45,53 47,51 50,51 C52,51 53,53 54,55 C55,53 56,51 58,51 C61,51 63,53 65,56 C69,61 75,66 81,65 C87,64 89,58 84,52 C74,41 54,36 54,36 Z"
+      android:pathData="M54,32 C54,32 32,36 21,49 C15,56 17,65 24,67 C32,69 39,63 44,57 C47,53 50,50 53,50 C54,50 54,52 54,53 Z"
       android:fillColor="#7C3AED"/>
+
+  <!-- الجناح الأيمن - بنفسجي -->
+  <path
+      android:pathData="M54,32 C54,32 76,36 87,49 C93,56 91,65 84,67 C76,69 69,63 64,57 C61,53 58,50 55,50 C54,50 54,52 54,53 Z"
+      android:fillColor="#7C3AED"/>
+
   <!-- الجزء السفلي الوردي -->
   <path
-      android:pathData="M54,55 C53,53 52,51 50,51 C48,51 46,53 44,55 C41,58 37,62 31,64 C36,67 42,65 46,62 C49,59 52,57 54,59 C56,57 59,59 62,62 C66,65 72,67 77,64 C71,62 67,58 64,55 C62,53 60,51 58,51 C56,51 55,53 54,55 Z"
+      android:pathData="M54,53 C54,52 53,50 51,50 C49,50 47,52 45,55 C41,60 36,65 29,67 C35,70 42,68 47,64 C50,61 53,58 54,60 C55,58 58,61 61,64 C66,68 73,70 79,67 C72,65 67,60 63,55 C61,52 59,50 57,50 C55,50 54,52 54,53 Z"
       android:fillColor="#EC4899"/>
-  <!-- آذان الخفاش -->
+
+  <!-- أذنان حادتان -->
   <path
-      android:pathData="M50,37 L47,28 L54,36 Z"
+      android:pathData="M50,34 L47,24 L54,32 Z"
       android:fillColor="#7C3AED"/>
   <path
-      android:pathData="M58,37 L61,28 L54,36 Z"
+      android:pathData="M58,34 L61,24 L54,32 Z"
       android:fillColor="#7C3AED"/>
-  <!-- نوتة موسيقية صغيرة -->
+
+  <!-- رأس الخفاش -->
   <path
-      android:pathData="M30,50 L30,58 C30,60 28,61 27,59 C26,57 28,55 29,56 L29,50 Z"
-      android:fillColor="#F0ABFC"/>
+      android:pathData="M54,32 m-7,0 a7,7 0,1 1,14 0 a7,7 0,1 1,-14 0"
+      android:fillColor="#6D28D9"/>
+
+  <!-- موجات صوتية يسرى - سيان -->
   <path
-      android:pathData="M30,50 L34,49 L34,52 L30,53 Z"
-      android:fillColor="#F0ABFC"/>
+      android:pathData="M24,54 L24,61"
+      android:strokeColor="#06B6D4"
+      android:strokeWidth="2"
+      android:strokeLineCap="round"/>
   <path
-      android:pathData="M78,50 L78,58 C78,60 76,61 75,59 C74,57 76,55 77,56 L77,50 Z"
-      android:fillColor="#F0ABFC"/>
+      android:pathData="M28,50 L28,65"
+      android:strokeColor="#06B6D4"
+      android:strokeWidth="2"
+      android:strokeLineCap="round"/>
   <path
-      android:pathData="M78,50 L82,49 L82,52 L78,53 Z"
-      android:fillColor="#F0ABFC"/>
+      android:pathData="M32,52 L32,63"
+      android:strokeColor="#06B6D4"
+      android:strokeWidth="2"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M36,55 L36,60"
+      android:strokeColor="#06B6D4"
+      android:strokeWidth="2"
+      android:strokeLineCap="round"/>
+
+  <!-- موجات صوتية يمنى - سيان -->
+  <path
+      android:pathData="M84,54 L84,61"
+      android:strokeColor="#06B6D4"
+      android:strokeWidth="2"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M80,50 L80,65"
+      android:strokeColor="#06B6D4"
+      android:strokeWidth="2"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M76,52 L76,63"
+      android:strokeColor="#06B6D4"
+      android:strokeWidth="2"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M72,55 L72,60"
+      android:strokeColor="#06B6D4"
+      android:strokeWidth="2"
+      android:strokeLineCap="round"/>
+
+  <!-- نجوم ذهبية -->
+  <path
+      android:pathData="M20,42 L21,39 L22,42 L25,42 L23,44 L24,47 L21,45 L18,47 L19,44 L17,42 Z"
+      android:fillColor="#F59E0B"/>
+  <path
+      android:pathData="M88,42 L89,39 L90,42 L93,42 L91,44 L92,47 L89,45 L86,47 L87,44 L85,42 Z"
+      android:fillColor="#F59E0B"/>
 
 </vector>
